themes/inbeat/assets/scss/partials/_header.scss
.show-nav {
  opacity: 1 !important;
  visibility: visible !important;
  top: 50px !important;
}

#navigation {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  cursor: default;
  background: white;
  left: 0;
  right: 0;
  z-index: 5;
  top: 55px;
  width: max-content;
  transition: all .1s cubic-bezier(0.5, 0.1, 0.6, 0.5);

  .submenu {
    box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.15);
    overflow: hidden;
    width: auto;

    .col-md-3 {
      @include breakpoint(md) {
        max-width: 23%;
      }
    }

    &.auto-width {
      @include breakpoint(md) {
        width: auto;
      }
    }

    .announcement {
      display: flex;
      flex-direction: column;
      color: white;
      margin-left: auto;
      z-index: 999;

      h2 {
        font-size: 14px;
        line-height: 18px;
        font-weight: bold;
        letter-spacing: 0.005em;
        margin: 0;
      }

      h1 {
        font-weight: 500;
        font-size: 24px;
        line-height: 30px;
        letter-spacing: -0.3px;
        max-width: 195px;
        margin-top: 32px;
      }

      .btn {
        border: none;
        color: black !important;
        align-self: baseline;
        margin-top: auto;
        width: 100%;
      }
    }

    .column {
      transition: $transition_default;
      opacity: 0.6;
      &.announcement{
        opacity: 1 !important;
      }
      &:hover:not(.announcement) {
        opacity: 1 !important;
      }

      h4,
      p {
        margin: 0;
        padding: 0;
      }

      padding: 32px;

      &.main-column {
        min-width: 265px;
        background: #fcfcfc;
      }

      ul {
        padding: 0;
        margin: 0 auto;
        position: relative;
        list-style: none;

        li {
          float: none;
          margin-right: 0;
        }
      }

      h4 {
        margin: 0;
        font-size: 14px;
        line-height: 18px;
        font-weight: 400;
        vertical-align: middle;
        line-height: normal;
      }

      .title {
        padding-bottom: 25px;
        display: flex;
        align-items: center;
        flex-direction: row;
        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
        padding-top: 0;

        .tag {
          background-color: #f2f2f2;
          font-size: 11px;
          line-height: 16px;
          border-radius: 20px;
          padding: 2px 8px;
          letter-spacing: 0.01em;
          font-weight: normal;
          margin-left: 8px;
          line-height: normal;
        }

        h4 {
          font-weight: bold;
        }

        svg {
          margin-top: 2px;
          margin-right: 5px;
        }
      }

      .pages {
        transition: $transition_default;
        cursor: pointer;

        .more-link {
          padding: 14px 16px;
          opacity: 0.3;
          transition: $transition_default;
          display: block;
          margin-bottom: 64px;

          span {
            transition: $transition_default;
          }

          &:hover {
            opacity: 1;
            margin-left: 2px;

            span {
              padding-left: 5px;
            }
          }
        }

        .page {
          transition: $transition_default;
          cursor: pointer;

          &:nth-child(1) {
            margin-top: 5px;
          }

          .inner {
            border-radius: 5px;

            .tag {
              background-color: #f2f2f2;
              font-size: 11px;
              line-height: 16px;
              border-radius: 20px;
              padding: 2px 8px;
              letter-spacing: 0.01em;
              font-weight: normal;
              margin-left: 2px;
              line-height: normal;
              transition: all 0.05s ease;
            }
          }

          &:hover .tag {
            background-color: #000000;
            color: #ffffff;
          }

          p {
            font-size: 11px;
            line-height: 16px;
            opacity: 0.6;
            margin-top: 0.3125rem;
            letter-spacing: 0.01em;
          }
        }
      }
    }
  }
}
/* ... */

